# wing_design

./: .gitignore  justfile  pyproject.toml
.claude/skills/ortools-cp/: SKILL.md
docs/: guiding_ideas.md  plan.md  references.md
examples/: 00_design_parameters.py  01_wing_solid.py  02_aero_envelope.py  03_spar_sizing.py  04_volumetric_fea.py  05_stress_lines.py  06_frame_field.py  14_shell_wing.py  15_shell_stress_lines.py
examples/_out/: wingsail_v0.step  wingsail_v0.stl
paraview/: README.md  _common.py  fea_volumetric.py  frame_phi.py  frame_streamlines.py  shell_fea.py  shell_stress_lines.py  stress_lines.py
scripts/: validate_shell.py
src/wing_design/: __init__.py  scenario.py
src/wing_design/aero/: __init__.py  cases.py  loads.py  model.py
src/wing_design/geometry/: __init__.py  airfoil.py  wing.py
src/wing_design/materials/: __init__.py  unidir.py
src/wing_design/structural/: __init__.py  beam.py  fea.py  mesh.py  projection.py  shell.py
src/wing_design/truss/: __init__.py  extract.py  frame_field.py  parametrization.py  streamline.py  surface_streamlines.py
src/wing_design/viz/: __init__.py
