[project]
name = "wing-design"
version = "0.1.0"
description = "Wing design experiments using build123d"
readme = "README.md"
authors = [
    { name = "Daniel Toone", email = "daniel.toone@gmail.com" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "aerosandbox>=4.2.9",
    "build123d>=0.10.0",
    "ocp-vscode>=3.4.0",
    "ortools>=9.15.6755",
]

[project.scripts]
wing-design = "wing_design:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
